fixed wrapper/nav issue, nav now spans full width on mobile version

--- a/_phoneQuery.scss
+++ b/_phoneQuery.scss
@@ -2,10 +2,21 @@
 // ------------------------------------*
 @media only screen and (max-width:480px) {
 
+	.wrapper {
+		width: 100%;
+	}
+
+	main.contenthere,
+	article.post,
+	footer {
+		padding: 10px;
+	}
+
+
 
 	// header
 	.nav {
-		background: rgba(0, 0, 0, 0.3);
+		background: rgba(0, 0, 0, 0.8);
 		position: absolute;
 		top: 96px;
 		display: none;
