--- a/style.css
+++ b/style.css
@@ -597,8 +597,18 @@ img {
   }
 }
 @media only screen and (max-width: 480px) {
+  .wrapper {
+    width: 100%;
+  }
+
+  main.contenthere,
+  article.post,
+  footer {
+    padding: 10px;
+  }
+
   .nav {
-    background: rgba(0, 0, 0, 0.3);
+    background: rgba(0, 0, 0, 0.8);
     position: absolute;
     top: 96px;
     display: none;
